src/test/ui/const-generics/slice-const-param-mismatch.min.stderr
error: `&'static str` is forbidden as the type of a const generic parameter
  --> $DIR/slice-const-param-mismatch.rs:7:29
   |
LL | struct ConstString<const T: &'static str>;
   |                             ^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(const_generics)]`

error: `&'static [u8]` is forbidden as the type of a const generic parameter
  --> $DIR/slice-const-param-mismatch.rs:9:28
   |
LL | struct ConstBytes<const T: &'static [u8]>;
   |                            ^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(const_generics)]`

error: aborting due to 2 previous errors

